# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "description": "Job description generator API.",
+        "title": "API Documentation for Job Description Generator",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -15,9 +15,59 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "https://available-work.fly.dev/",
     "basePath": "/api/v1",
-    "paths": {},
+    "paths": {
+        "/example/helloworld": {
+            "get": {
+                "description": "do ping",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "ping example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/job-description": {
+            "get": {
+                "description": "Generates a job description for the given job title and saves it to Redis",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Generate job description",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The title of the job",
+                        "name": "jobTitle",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
     "securityDefinitions": {
         "BasicAuth": {
             "type": "basic"
